Add OxigraphService methods addQuads,query,update
